--- a/.github/workflows/lint_and_pytest.yaml
+++ b/.github/workflows/lint_and_pytest.yaml
@@ -16,7 +16,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: run pytest
-        run: pytest
+        run: python3 -m pytest
 
   lint:
     runs-on: ubuntu-latest
