--- a/src/dashboard/dockerfile
+++ b/src/dashboard/dockerfile
@@ -1,20 +1,20 @@
 # Use Python as the base image
-FROM python:3.13.5
+FROM python:3.9-slim
 
 # Set working directory
 WORKDIR /app
 
 # Install dependencies
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+COPY requirements.txt ./
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Copy the application code
-COPY src/dashboard/database.py .
-COPY src/dashboard/visuals.py .
-COPY src/dashboard/dashboard.py .
+COPY src/dashboard/database.py ./
+COPY src/dashboard/visuals.py ./
+COPY src/dashboard/dashboard.py ./
 
 # Expose the Streamlit port
 EXPOSE 8501
 
 # Command to run the Streamlit app
-CMD ["streamlit", "run", "dashboard.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "./dashboard.py", "--server.port=8501"]
