--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ soupsieve==2.7
 SQLAlchemy==2.0.41
 typing_extensions==4.14.1
 tzdata==2025.2
-urllib3==2.5.0
+urllib3
 requests_mock
 reportlab
 vl-convert-python
