--- a/src/subscriber/form/Dockerfile.noti
+++ b/src/subscriber/form/Dockerfile.noti
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt --target "${LAMBDA_TASK_ROOT}"
 
-COPY src/subscriber/notification/ ${LAMBDA_TASK_ROOT}/
+COPY src/subscriber/form/ ${LAMBDA_TASK_ROOT}/
 
 
 CMD ["notification.handler"]
